--- a/login.html
+++ b/login.html
@@ -35,8 +35,8 @@
                 <div class="card-header bg-dark text-center text-white font-weight-bold">
                     管理系統平台登入
                 </div>
-                <form class="needs-validation h-100 d-flex align-items-between flex-column" novalidate>
-                    <div class="card-body border-0">
+                <form class="needs-validation d-flex align-items-between flex-column" novalidate>
+                    <div class="card-body h-100 border-0">
                         <div class="form-row">
                             <label for="validationCustom01">AccountNumber</label>
                             <input type="text" class="form-control mb-3" id="validationCustom01" placeholder="AccountNumber"
