--- a/login.html
+++ b/login.html
@@ -78,8 +78,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.21/moment-timezone-with-data.js"></script>
-    <script type="text/javascript" src="//ku.shouce.ren/libs/fk7/1.4.2/js/framework7.min.js"></script>
-    <script src="js/animated.js"></script>
+    <script type="text/javascript" src="https://ku.shouce.ren/libs/fk7/1.4.2/js/framework7.min.js"></script>
     <script src="js/all.js"></script>
 </body>
 
